src/_patterns/50-organisms/sections/main.css
/* ... */
.-service-directory-page.without-intro.section-main .section-main-title,
.-service-directory-page.without-intro.section-main .section-main-subtitle, .-subject-librarian-directory-page.without-intro.section-main .section-main-title,
.-subject-librarian-directory-page.without-intro.section-main .section-main-subtitle, .-staff-directory-page.without-intro.section-main .section-main-title,
.-staff-directory-page.without-intro.section-main .section-main-subtitle, .-research-help-directory-page.without-intro.section-main .section-main-title,
.-research-help-directory-page.without-intro.section-main .section-main-subtitle {
  display: none;
}
@media (max-width: 600px) {
  .-gallery-page.section-main {
    grid-template-columns: [main-start] 100% [main-end];
    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end] repeat(100, [auto-start] -webkit-min-content [auto-end]);
    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end] repeat(100, [auto-start] min-content [auto-end]);
  }
}
@media (min-width: 601px) and (max-width: 900px) {
  .-gallery-page.section-main {
    grid-template-columns: [main-start] 100% [main-end];
    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end] repeat(100, [auto-start] -webkit-min-content [auto-end]);
    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end] repeat(100, [auto-start] min-content [auto-end]);
  }
}
@media (min-width: 901px) {
  .-gallery-page.section-main {
    grid-template-columns: [main-start] 100% [main-end];
    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end] repeat(100, [auto-start] -webkit-min-content [auto-end]);
    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end] repeat(100, [auto-start] min-content [auto-end]);
  }
}
.-gallery-page.section-main .section-main-subtitle,
.-gallery-page.section-main .section-main-body,
.-gallery-page.section-main .section-main-spacer,
.-gallery-page.section-main .section-main-content,
.-gallery-page.section-main .section-main-section,
.-gallery-page.section-main .section-main-sidebar {
  display: none;
}
@media (max-width: 600px) {
  .-event-page.section-main {
    grid-template-columns: [main-start] 100% [main-end];
    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end body-start] -webkit-min-content [body-end] repeat(100, [auto-start] -webkit-min-content [auto-end]) [sidebar-start] -webkit-min-content [sidebar-end];
    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end body-start] min-content [body-end] repeat(100, [auto-start] min-content [auto-end]) [sidebar-start] min-content [sidebar-end];
  }
}
@media (min-width: 601px) and (max-width: 900px) {
  .-event-page.section-main {
    grid-template-columns: [main-start] 100% [main-end];
    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end body-start] -webkit-min-content [body-end] repeat(100, [auto-start] -webkit-min-content [auto-end]) [sidebar-start] -webkit-min-content [sidebar-end];
    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end body-start] min-content [body-end] repeat(100, [auto-start] min-content [auto-end]) [sidebar-start] min-content [sidebar-end];
  }
}
@media (min-width: 901px) {
  .-event-page.section-main {
    grid-template-columns: [main-start] 100% [main-end];
    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end title-start] -webkit-min-content [title-end body-start] -webkit-min-content [body-end] repeat(100, [auto-start] -webkit-min-content [auto-end]) [sidebar-start] -webkit-min-content [sidebar-end];
    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end title-start] min-content [title-end body-start] min-content [body-end] repeat(100, [auto-start] min-content [auto-end]) [sidebar-start] min-content [sidebar-end];
  }
}
@media (min-width: 901px) {
  .-event-page.section-main {
    grid-template-columns: [main-start] 1fr [main-end sidebar-start] 340px [sidebar-end];
    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end main-start title-start] -webkit-min-content [title-end body-start] -webkit-min-content [body-end] repeat(100, [auto-start] -webkit-min-content [auto-end]) [main-end];
    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end main-start title-start] min-content [title-end body-start] min-content [body-end] repeat(100, [auto-start] min-content [auto-end]) [main-end];
  }
}
.-event-page.section-main .section-main-section,
.-event-page.section-main .section-main-subtitle {
  display: none;
}
@media (min-width: 901px) {
  .-event-page.section-main .section-main-breadcrumb {
    grid-column: main/sidebar;
  }
  .-event-page.section-main .section-main-title {
    grid-column: main/sidebar;
  }
  .-event-page.section-main .section-main-sidebar {
    grid-row: body/main;
  }
}
@media (max-width: 600px) {
  .-exhibition-page.section-main {
    grid-template-columns: [main-start] 100% [main-end];
    grid-template-rows: [breadcrumb-start] -webkit-min-content [breadcrumb-end subtitle-start] -webkit-min-content [subtitle-end body-start] -webkit-min-content [body-end] repeat(100, [auto-start] -webkit-min-content [auto-end]) [sidebar-start] -webkit-min-content [sidebar-end];
    grid-template-rows: [breadcrumb-start] min-content [breadcrumb-end subtitle-start] min-content [subtitle-end body-start] min-content [body-end] repeat(100, [auto-start] min-content [auto-end]) [sidebar-start] min-content [sidebar-end];
  }
}
/* ... */

